application/welcome/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-svc
spec:
  selector:
    app: welcome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
