application/welcome/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: ukjjang.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-svc
                port:
                  number: 80
  tls:
    - hosts:
        - ukjjang.me
      secretName: ukjjang-tls
